rearanged footer to fix overlaping

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -19,7 +19,7 @@ As well as useful links to learn more */
 .image {
   width: 100%;
   height: auto;
-  max-height: 300px; /* adjust this value as needed */
+  max-height: 300px; 
   object-fit: cover;
   display: block;
 }
@@ -55,12 +55,15 @@ https://www.w3.org/WAI/tutorials/page-structure/regions/
 */
 main {
   max-width: var(--container);
-  margin: 0 auto calc(var(--space) * 4) auto;
+  margin-top: 0;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 80px;
 }
+
 footer {
-  position: fixed;
-  bottom: 0;
   text-align: center;
+  padding: 20px;
 }
 /* ====== Articles Grid Layout ====
 Setting the rules for how articles are placed in the main element.
